// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Payment / VoucherForm Initial Code 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <form
      className="voucher-form "
      onSubmit={[Function]}
    >
      <div
        className="voucher-form__line"
      >
        <div
          className="form-field-container "
        >
          <label
            className="label form-field-container__label"
            htmlFor="__mock_generated_id__"
          >
            Code promo
          </label>
          <div
            className="form-field-container__field"
          >
            <input
              aria-invalid={false}
              autoComplete="off"
              className="form-input-field "
              disabled={false}
              formNoValidate={true}
              id="__mock_generated_id__"
              maxLength={16}
              name="code"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck={false}
              type="text"
              value="EURO2016"
            />
          </div>
        </div>
      </div>
      <div
        className="voucher-form__line"
      >
        <button
          className="button button--size-small progress-button voucher-form__button"
          disabled={false}
          type="submit"
        >
          <div
            className="progress-button__content"
          >
            Ajouter le code promo
          </div>
          <div
            className="progress-button__progress-bar"
          />
        </button>
        <button
          className="button button--size-small voucher-form__button"
          disabled={false}
          onClick={[Function]}
          type="reset"
        >
          Annuler
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Payment / VoucherForm Main 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <form
      className="voucher-form "
      onSubmit={[Function]}
    >
      <div
        className="voucher-form__line"
      >
        <div
          className="form-field-container "
        >
          <label
            className="label form-field-container__label"
            htmlFor="__mock_generated_id__"
          >
            Code promo
          </label>
          <div
            className="form-field-container__field"
          >
            <input
              aria-invalid={false}
              autoComplete="off"
              className="form-input-field "
              disabled={false}
              formNoValidate={true}
              id="__mock_generated_id__"
              maxLength={16}
              name="code"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck={false}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="voucher-form__line"
      >
        <button
          className="button button--size-small progress-button voucher-form__button"
          disabled={false}
          type="submit"
        >
          <div
            className="progress-button__content"
          >
            Ajouter le code promo
          </div>
          <div
            className="progress-button__progress-bar"
          />
        </button>
        <button
          className="button button--size-small voucher-form__button"
          disabled={false}
          onClick={[Function]}
          type="reset"
        >
          Annuler
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Payment / VoucherForm Submit Error 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <form
      className="voucher-form "
      onSubmit={[Function]}
    >
      <div
        className="voucher-form__line"
      >
        <div
          className="form-field-container "
        >
          <label
            className="label form-field-container__label"
            htmlFor="__mock_generated_id__"
          >
            Code promo
          </label>
          <div
            className="form-field-container__field"
          >
            <input
              aria-invalid={false}
              autoComplete="off"
              className="form-input-field "
              disabled={false}
              formNoValidate={true}
              id="__mock_generated_id__"
              maxLength={16}
              name="code"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck={false}
              type="text"
              value="CODE21"
            />
          </div>
        </div>
      </div>
      <div
        className="voucher-form__line"
      >
        <button
          className="button button--size-small progress-button voucher-form__button"
          disabled={false}
          type="submit"
        >
          <div
            className="progress-button__content"
          >
            Ajouter le code promo
          </div>
          <div
            className="progress-button__progress-bar"
          />
        </button>
        <button
          className="button button--size-small voucher-form__button"
          disabled={false}
          onClick={[Function]}
          type="reset"
        >
          Annuler
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Storyshots Payment / VoucherForm Submit Success 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <form
      className="voucher-form "
      onSubmit={[Function]}
    >
      <div
        className="voucher-form__line"
      >
        <div
          className="form-field-container "
        >
          <label
            className="label form-field-container__label"
            htmlFor="__mock_generated_id__"
          >
            Code promo
          </label>
          <div
            className="form-field-container__field"
          >
            <input
              aria-invalid={false}
              autoComplete="off"
              className="form-input-field "
              disabled={false}
              formNoValidate={true}
              id="__mock_generated_id__"
              maxLength={16}
              name="code"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck={false}
              type="text"
              value="CODE21"
            />
          </div>
        </div>
      </div>
      <div
        className="voucher-form__line"
      >
        <button
          className="button button--size-small progress-button voucher-form__button"
          disabled={false}
          type="submit"
        >
          <div
            className="progress-button__content"
          >
            Ajouter le code promo
          </div>
          <div
            className="progress-button__progress-bar"
          />
        </button>
        <button
          className="button button--size-small voucher-form__button"
          disabled={false}
          onClick={[Function]}
          type="reset"
        >
          Annuler
        </button>
      </div>
    </form>
  </div>
</div>
`;
